@startuml
'https://plantuml.com/class-diagram

skinparam Linetype ortho

title "Diagrama de clases - Ejercicio 19"

class Articulo {
    - String nombre
    - double costo
    - String observacion

    constructor(String nombre, double costo)

    + getters y setters()
}

class ListaPrecios {
    - String nombre
    - Date fechaVigencia
    - TipoLista tipo
    - HashMap<Articulo, double> precios

    constructor(String nombre, Date fechaVigencia, TipoLista tipo)

    + void agregarArticulo(Articulo articulo)
    + getters y setters()
}

enum TipoLista {
    MAYORISTA
    MINORISTA
}

' relaciones
Articulo o-- ListaPrecio : "tiene"
TipoLista o-- ListaPrecio : "es de tipo"
ListaPrecio o-- CalculadoraPrecios : "calcula"

@enduml